--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ db_name=shopping
 db_test=shopping_test
 db_user=shopping_user
 db_password=password123
-
+port=5432
 BCRYPT_PASSWORD=your_secret_password
 
 SAULT_SHOTS=10
