--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "migrate": "^1.8.0",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "typescript": "^4.6.4"
   },
@@ -18,6 +19,7 @@
     "@types/cors": "^2.8.12",
     "@types/jasmine": "^4.0.3",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
     "@types/pg": "^8.6.5",
     "jasmine": "^4.1.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -32,10 +34,12 @@
   "scripts": {
     "prestart": "npm run build",
     "start": "nodemon build/server.js",
+    "dev": "nodemon src/server.ts --watch",
     "build": "npx tsc",
     "db:up": "db-migrate up",
+    "db:down": "db-migrate down",
     "test": "npm run build && set ENV=test && db-migrate --env test up && jasmine && db-migrate --env test reset",
-    "jasmine": "jasmine"
+    "jasmine": "jasmine-"
   },
   "keywords": [],
   "author": "",
